# BEARS

./: .env.example  .gitattributes  .gitignore  DB.py  PoC構想書_template.docx  README.md  audio_rag_full_eval.csv  audio_rag_search.py  audio_search_tool.py  build_audio_knowledge_base.py  build_audio_rag_db.py  build_enriched_how2qa.py  build_how2qa_db.py  generate_audio_squad.py  how2qa_100.json  how2qa_100_enriched.json  how2qa_eval.py  pyproject.toml  run_4_strategies.py
.github/workflows/: claude-code-review.yml
audio_qa/: audio_rag_search.py  audio_search_tool.py  build_audio_knowledge_base.py  build_audio_rag_db.py  generate_audio_squad.py
audio_qa/data/: spoken_squad_100.json
data/: corpus.json  queries.json
docs/: IMPLEMENTATION_PLAN.md
experiments/: default.yaml  gpt4.1_gen.yaml
frontend/: README.md  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ExperimentPanel.jsx  QuestionDetailModal.jsx  QuestionsTable.jsx  SourceMetricsTable.jsx
frontend/src/pages/: Chatbot.css  Chatbot.jsx  Dashboard.jsx  EvalBatch.jsx  EvalResult.jsx  Experiments.jsx  History.jsx
frontend/src/services/: api.js
frontend/src/utils/: metrics.js
image_qa/: build_image_db.py  run_4_strategies.py  run_hybrid_rerank.py
infographic_rag_data_strict/: ground_truth.json  ground_truth_en.json
scripts/: build_db.py
src/bears/api/: api.py  (+1 more)
utils/: RAG.py
video_qa/: build_enriched_how2qa.py  build_how2qa_db.py  download_how2qa_videos.py  how2qa_eval.py
video_qa/data/: how2qa_100.json  how2qa_100_enriched.json  how2qa_100_rewritten.json
(+43 files in other folders)
