[project]
name = "bears"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langchain-chroma>=0.2",
    "langchain-neo4j>=0.3",
    "langgraph>=0.6",
    "langfuse>=3.7",
    "chromadb>=1.4",
    "neo4j>=5.28",
    "openai>=2.17",
    "pydantic>=2.12",
    "pydantic-settings>=2.11",
    "python-dotenv>=1.2",
    "pyyaml>=6.0",
    "instructor>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bears"]

[project.scripts]
bears-eval = "bears.evaluation.cli:main"
